# template_python

./: .gitignore  README.md  pyproject.toml  run_both.py  run_mod1.py  run_mod2.py
data/module1/: mod_1_file.txt
data/others/: other_file.txt
module1/: __main__.py  mod1_a.py
module2/: mod2_b.py
src/module1/: __init__.py  __main__.py  main.py  mod1_a.py  mod1_b.py
src/module2/: __main__.py  mod2_a.py
tests/module1/: test_mod1.py
tests/module2/: test_mod2.py
