[tool.poetry]
name = "template-python"
version = "0.1.0"
description = ""
authors = ["Nathaniel Gerlek <nathaniel.gerlek@gmail.com>"]
readme = "README.md"

packages = [
    {include = "module1", from = "src"},
    {include = "module2", from = "src"},
]

[tool.poetry.scripts]
myscript="module1.main:main"

[tool.poetry.dependencies]
python = "=3.12.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
pytest = "^8.4.1"
ruff = "^0.12.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
warn_unreachable = true
